Applied changes to the database, so it has another own entity of Category for products. Made available categorization of items in the menu. Implemented working with DTO in the menu section.

--- a/src/Restourant.Web/Restourant.Web.csproj
+++ b/src/Restourant.Web/Restourant.Web.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Restaurant.Data\Restaurant.Data.csproj" />
+    <ProjectReference Include="..\Restaurant.Services\Restaurant.Services.csproj" />
   </ItemGroup>
 
 
@@ -29,6 +30,11 @@
     <Content Update="Areas\Identity\Pages\Account\Login.cshtml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+  </ItemGroup>
+
+
+  <ItemGroup>
+    <Folder Include="Areas\Products\Data\" />
   </ItemGroup>
 
 </Project>
