Added name property of the Tables entity of the database in order to make a better user experience. Introduced Tables Service, Areas, Controller, Views and basic logic flow with DTO.

--- a/src/Restourant.Web/Restourant.Web.csproj
+++ b/src/Restourant.Web/Restourant.Web.csproj
@@ -30,11 +30,18 @@
     <Content Update="Areas\Identity\Pages\Account\Login.cshtml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Update="Areas\Tables\Views\Tables\All.cshtml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Update="Areas\Tables\Views\_ViewImports.cshtml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
 
   <ItemGroup>
     <Folder Include="Areas\Products\Data\" />
+    <Folder Include="Areas\Tables\Data\" />
   </ItemGroup>
 
 </Project>
