--- a/src/Restourant.Web/Restourant.Web.csproj
+++ b/src/Restourant.Web/Restourant.Web.csproj
@@ -40,6 +40,7 @@
 
 
   <ItemGroup>
+    <Folder Include="Areas\Orders\Data\" />
     <Folder Include="Areas\Products\Data\" />
     <Folder Include="Areas\Tables\Data\" />
   </ItemGroup>
